@@ -2810,6 +2810,33 @@ operator|.
 name|nextToken
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|permission
+operator|.
+name|length
+argument_list|()
+operator|>
+name|FsPermission
+operator|.
+name|MAX_PERMISSION_LENGTH
+condition|)
+block|{
+comment|//files with ACLs might have a '+'
+name|permission
+operator|=
+name|permission
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|FsPermission
+operator|.
+name|MAX_PERMISSION_LENGTH
+argument_list|)
+expr_stmt|;
+block|}
 name|setPermission
 argument_list|(
 name|FsPermission
